# gradys-sim-nextgen

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
docs/Guides/: 4_ardupilot.md
docs/Guides/ardupilot example/: main.py  simple_protocol.py
gradysim/simulator/handler/: ardupilot_mobility.py
showcases/ardupilot-simple/: main.py  message.py  protocol_ground.py  protocol_mobile.py  protocol_sensor.py
showcases/rl-bridge/: .gitignore  CLOSED_LOOP_GUIDE.md  ENVIRONMENT.md  PPO_RESULTS.md  README.md  UAVSIM4SECURITY_RLLIB_INTEGRATION_PLAN.md  __init__.py  baseline_policies.py  experiment_runner.py  gradys_uav_service_env.py  gymnasium_adapter.py  main_baselines.py  main_gym_random.py  main_random.py  main_rllib_ppo_evaluate.py  main_rllib_ppo_smoke.py  main_rllib_ppo_train.py  main_rllib_ppo_visualize.py  main_rllib_random.py  main_trace_workload.py  main_uavsim4security_random.py  main_uavsim4security_rllib_ppo_train.py  main_uavsim4security_visualize.py  main_visualize.py  pettingzoo_parallel_adapter.py  requirements-marl.txt  requirements-minimal.txt  requirements-rl.txt  requirements-training.txt  rl_protocols.py  rllib_action_mask_model.py  rllib_multiagent_adapter.py  rllib_uavsim4security_adapter.py  uavsim4security_core_env.py  workload.py
showcases/rl-bridge/outputs/: baseline_scan_30s.csv  baseline_scan_3uav_c3.csv  baseline_scan_higherload_c3.csv  baseline_scan_highload.csv  baseline_scan_highload_c3.csv  rllib_ppo_smoke_metrics.json  rllib_ppo_train_100iter_eval20_tight_deadline_multi_seed_summary.csv  (+2 more)
(+100 files in other folders)
