[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gradys*"]

[project]
name = "gradysim"
version = "0.7.5"
description = "GrADyS-SIM NextGen is a framework for implementing distributed algorithms in a simulated network environment"
keywords = ["network", "distributed", "algorithm", "simulation", "gradys", "LAC", "PUC", "drone", "sensor"]
authors = [
    { name = "Thiago de Souza Lamenza", email = "thlamenza@hotmail.com" },
    { name = "Josef Maria Kamysek", email = "josef@kamysek.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    'websockets>=12',
    'uav-api>=0.1.3',
    'pandas>=2.2.3',
    'aiohttp>=3.11.14'
]

[project.urls]
"Homepage" = "https://github.com/Project-GrADyS/gradys-sim-nextgen"
"Documentation" = 'https://project-gradys.github.io/gradys-sim-nextgen/'

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.15.11",
]
